= Changelog

== repository

  * CHANGED: improved documentation and added more examples (closes #21).
  * FIXED: a wrong indentation in README file causes all list items to be rendered as source code.

== Release 0.1.0 (2008-05-11)

  * Initial public release.