@@ -2,7 +2,10 @@
 
 == repository
 
+  * ADDED: :base_uri initialization option allows to create a new instance specifying a custom base_uri for all API calls. This is useful, for example, if you want to use ma.gno.lia Mirror'd APIs (http://wiki.ma.gnolia.com/Mirror%27d_API) instead the del.icio.us one (thanks to Jörg Battermann).
+
   * CHANGED: improved documentation and added more examples (closes #21).
+  
   * FIXED: a wrong indentation in README file causes all list items to be rendered as source code.
 
 == Release 0.1.0 (2008-05-11)
